Add header and footer links

--- a/footer.html
+++ b/footer.html
@@ -11,12 +11,12 @@
     <footer>
         <p>Still have questions?</p>
         <p>Contact email@email.com</p>
-        <a>Code of Conduct</a>
+        <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>
 
         <section class="icons">
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-square-facebook"></i>
-        <i class="fa-brands fa-linkedin"></i>
+        <a href="https://www.instagram.com/techtogetherboston/ " target="_blank"><i class="fa-brands fa-instagram"></i></i></a>
+        <a href="https://www.facebook.com/TechTogetherBoston/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="https://www.linkedin.com/company/techtogetherboston/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </section>
         
     </footer>
