--- a/landing.html
+++ b/landing.html
@@ -16,13 +16,13 @@
             <li>Sponsors</li>
             <li>Register</li>
         </ul>
-        <img src="./img/mlh banner.svg" alt="MLH Banner logo">
+        <a href="https://mlh.io/seasons/2023/events" target="_blank"><img src="./img/mlh banner.svg" alt="MLH Banner logo"></a>
     
     </nav>    
     <section>
         <h1>TechTogether Boston</h1>
         <h3>October 29-30, 2022 @ Boston University</h3>
-        <button>Register Now</button>
+        <button><a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank">Register Now</a></button>
     </section>
     <section class="byte">
         <img src="./img/witch-byte.svg">
