added the svg files

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     
     <!-- Sponsor Section -->
     <div>
+        <div><img src="assets/bats.png" alt=""></div>
+        <div><img src="assets/witch hat.png" alt=""></div>
         <h1>Sponsors</h1>
         <a href="https://www.slalombuild.com/"><img src="assets/sponsorship logo/Slalom_build.png" alt="Slalom_Build" /></a>
         <img src="#" alt="Sponsor logo" />
@@ -94,6 +96,7 @@
             </script>
         </div>
         <button>Register Now</button>
+        <div><img src="assets/full bucket.png" alt=""></div>
     </div>
 
     <!-- Footer Section -->
