changed images from png to svg

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     
     <!-- Sponsor Section -->
     <div>
-        <div><img src="assets/bats.png" alt=""></div>
-        <div><img src="assets/witch hat.png" alt=""></div>
+        <div><img src="assets/bats.svg" alt=""></div>
+        <div><img src="assets/witch hat.svg" alt=""></div>
         <h1>Sponsors</h1>
-        <a href="https://www.slalombuild.com/"><img src="assets/sponsorship logo/Slalom_build.png" alt="Slalom_Build" /></a>
+        <a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" /></a>
         <img src="#" alt="Sponsor logo" />
         <img src="#" alt="Sponsor logo" />
     </div>
@@ -96,7 +96,7 @@
             </script>
         </div>
         <button>Register Now</button>
-        <div><img src="assets/full bucket.png" alt=""></div>
+        <div><img src="assets/full bucket.svg" alt=""></div>
     </div>
 
     <!-- Footer Section -->
