--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css"/>
   </head>
 
   <body>
@@ -417,17 +418,26 @@
 
     <!-- Sponsor Section -->
     <div>
-        <div><img src="assets/bats.svg" alt=""></div>
-        <div><img src="assets/witch hat.svg" alt=""></div>
-        <h1>Sponsors</h1>
-        <a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" /></a>
-        <img src="#" alt="Sponsor logo" />
-        <img src="#" alt="Sponsor logo" />
+        <div class="bat"><img src="assets/bats.svg" alt="bats" width="50%"></div>
+        <div class ="witch_sponsor">
+            <div><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
+            <div><h1>Sponsors</h1></div>
+        </div>
+
+        <div class="sponsor_logos">
+            <div><a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" width="200" height="200"/></a></div>
+            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
+            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
+            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
+            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
+            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
+        </div>
+        
     </div>
 
     <!-- Countdown Section -->
-    <div>
-        <h1>Tech Together Boston Starts In</h1>
+    <div class="countdown">
+        <h1>Tech Together Boston <br> Starts In</h1>
         <p id="time"></p>
         <div>
             <script>
@@ -449,7 +459,7 @@
                 }, 1000);
             </script>
         </div>
-        <button>Register Now</button>
+        <button class="button rounded register">Register Now</button>
         <div><img src="assets/full bucket.svg" alt=""></div>
     </div>
 
