added more css styles: flex property of sponsors, arranged candy and adjusted register button

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
     <!-- Countdown Section -->
     <div class="countdown">
         <h1>Tech Together Boston <br> Starts In</h1>
-        <p id="time"></p>
+        <p class="time" id="time"></p>
         <div>
             <script>
                 var hackathonDate = new Date("Oct 29, 2022 00:00:00").getTime();
@@ -460,8 +460,8 @@
             </script>
         </div>
         <button class="button rounded register">Register Now</button>
-        <div><img src="assets/full bucket.svg" alt=""></div>
     </div>
+    <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
 
     <!-- Footer Section -->
     <div>
