added margins and working on witch hat postion

--- a/index.html
+++ b/index.html
@@ -419,10 +419,8 @@
     <!-- Sponsor Section -->
     <div>
         <div class="bat"><img src="assets/bats.svg" alt="bats" width="50%"></div>
-        <div class ="witch_sponsor">
-            <div><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
-            <div><h1>Sponsors</h1></div>
-        </div>
+        <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
+        <div class="sponsors"><h1>Sponsors</h1></div>
 
         <div class="sponsor_logos">
             <div><a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" width="200" height="200"/></a></div>
