--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="FAQ">
       <img
         class="FAQ-asset"
-        src="./FAQ-title-asset.svg"
+        src="./img/FAQ-title-asset.svg"
         alt="FAQ-title-asset"
       />
       <h1 class="FAQ-heading">Frequently Asked Questions</h1>
@@ -82,7 +82,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -106,7 +106,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -125,7 +125,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -145,7 +145,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -167,7 +167,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -191,7 +191,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -216,7 +216,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -234,7 +234,7 @@
           <button class="FAQ-question-header">Who can attend?</button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -254,7 +254,7 @@
           <button class="FAQ-question-header">What is a hackathon?</button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -274,7 +274,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -293,7 +293,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -314,7 +314,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
@@ -335,7 +335,7 @@
           </button>
           <img
             class="FAQ-arrow"
-            src="./arrow-down.svg"
+            src="./img/arrow-down.svg"
             alt="FAQ-arrow-down"
             style="background-color: black"
           />
