--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     </header>
 
     <!-- About Section -->
-    <div>
-      <h1>About Us</h1>
-      <div>
-        <p>
+    <div class="ABOUT">
+      <h1 class="ABOUT-heading">About Us</h1>
+      <div class="ABOUT-contents">
+        <p class="ABOUT-text-contents">
           TechTogether Boston is a 2-day hackathon for people of marginalized
           genders hosted by community leaders across Massachusetts. The event
           will take place October 29-30th in the George Sherman Union at Boston
           University.
         </p>
-        <p>
+        <p class="ABOUT-text-contents">
           Join us for two full days of skill-building and professional
           development workshops, networking with recruiters, and of course - fun
           activities like face masks. Each attendee has the option to work with
@@ -52,8 +52,7 @@
           100th, everyone has something to learn and contribute at this event!
         </p>
         <iframe
-          width="420"
-          height="315"
+          class="ABOUT-video"
           src="https://www.youtube.com/embed/8XeKABwrokY"
         >
         </iframe>
@@ -93,14 +92,13 @@
                 Your project will be submitted through Devpost. Click on the
                 "Submit Project" button at the top of the site to access the
                 Devpost. Your submission must include a video (no longer than 2
-                minutes) that showcases your project, a basic description of your
-                project, and the challenge(s) for which you want your project to
-                be considered.
+                minutes) that showcases your project, a basic description of
+                your project, and the challenge(s) for which you want your
+                project to be considered.
               </p>
             </div>
             <hr class="FAQ-hr" />
           </div>
-
 
           <!-- Question 2 -->
           <div class="FAQ-question-div">
@@ -114,8 +112,8 @@
             />
             <div class="FAQ-answer-div">
               <p class="FAQ-answer">
-                The locations of all workshops, activities, and events throughout
-                the weekend will be on the event schedule.
+                The locations of all workshops, activities, and events
+                throughout the weekend will be on the event schedule.
               </p>
             </div>
             <hr class="FAQ-hr" />
@@ -141,7 +139,6 @@
             <hr class="FAQ-hr" />
           </div>
 
-
           <!-- Question 4 -->
           <div class="FAQ-question-div">
             <button class="FAQ-question-header">
@@ -164,7 +161,6 @@
             <hr class="FAQ-hr" />
           </div>
 
-
           <!-- Question 5 -->
           <div class="FAQ-question-div">
             <button class="FAQ-question-header">
@@ -177,18 +173,17 @@
             />
             <div class="FAQ-answer-div">
               <p class="FAQ-answer">
-                All teams must be between 2-4 people. While you have the option to
-                work alone, if you want to submit your project you must work with
-                at least one other person. Don't worry if you don't have a
-                team—you'll have plenty of opportunities to find one! TechTogether
-                will be hosting a variety of team formation activities throughout
-                the first day, and we will also have a space dedicated to team
-                formation during the event.
+                All teams must be between 2-4 people. While you have the option
+                to work alone, if you want to submit your project you must work
+                with at least one other person. Don't worry if you don't have a
+                team—you'll have plenty of opportunities to find one!
+                TechTogether will be hosting a variety of team formation
+                activities throughout the first day, and we will also have a
+                space dedicated to team formation during the event.
               </p>
             </div>
             <hr class="FAQ-hr" />
           </div>
-
 
           <!-- Question 6 -->
           <div class="FAQ-question-div">
@@ -204,11 +199,11 @@
               <p class="FAQ-answer">
                 The hackathon is from Oct 28th (virtually for 1-day) to Oct 30th
                 date. This event will be in-person at George Sherpard Union.
-                Participants can start arriving at 7 am on Oct 29th and the event
-                will conclude at 4 pm on Oct 30th. Participants will need to
-                arrange their own transportation to and from the event. (Feel free
-                to include transportation info such as public transportation
-                nearby, directions, and more)
+                Participants can start arriving at 7 am on Oct 29th and the
+                event will conclude at 4 pm on Oct 30th. Participants will need
+                to arrange their own transportation to and from the event. (Feel
+                free to include transportation info such as public
+                transportation nearby, directions, and more)
               </p>
             </div>
             <hr class="FAQ-hr" />
@@ -217,7 +212,6 @@
         <!-- end of FAQ-column -->
 
         <div class="FAQ-column">
-
           <!-- Question 7 -->
           <div class="FAQ-question-div">
             <button class="FAQ-question-header">
@@ -230,9 +224,9 @@
             />
             <div class="FAQ-answer-div">
               <p class="FAQ-answer">
-                We recommend bringing basic hygiene products, clothes, a sleeping
-                bag with a pillow and blanket, and laptops/phones with chargers
-                (Feel free to add more things)
+                We recommend bringing basic hygiene products, clothes, a
+                sleeping bag with a pillow and blanket, and laptops/phones with
+                chargers (Feel free to add more things)
               </p>
             </div>
             <hr class="FAQ-hr" />
@@ -252,12 +246,12 @@
                 includes high school, college, bootcamp students, and industry
                 professionals who are cisgender women, transgender men,
                 transgender women, non-binary people, and people of all other
-                genders that have been historically left on the sidelines in tech.
+                genders that have been historically left on the sidelines in
+                tech.
               </p>
             </div>
             <hr class="FAQ-hr" />
           </div>
-
 
           <!-- Question 9 -->
           <div class="FAQ-question-div">
@@ -276,7 +270,6 @@
             </div>
             <hr class="FAQ-hr" />
           </div>
-
 
           <!-- Question 10 -->
           <div class="FAQ-question-div">
@@ -300,7 +293,8 @@
           <!-- Question 11 -->
           <div class="FAQ-question-div">
             <button class="FAQ-question-header">
-              Do I need experience to participate? Do I have to know how to code?
+              Do I need experience to participate? Do I have to know how to
+              code?
             </button>
             <img
               class="FAQ-arrow"
@@ -358,7 +352,6 @@
             </div>
             <hr class="FAQ-hr" />
           </div>
-
         </div>
         <!-- end of FAQ-column -->
       </div>
@@ -367,103 +360,117 @@
     <!-- end of FAQ -->
 
     <!-- Volunteer Section -->
-    <div>
-      <h1>Share it Forward</h1>
-      <div>
+    <div class="VOLUNTEER">
+      <h1 class="VOLUNTEER-heading">Share it Forward</h1>
+      <div class="VOLUNTEER-cards-container">
         <!-- Mentor Hackers -->
-        <div style="border: solid 1px red">
-          <p>Mentor Hackers 👨‍💻</p>
-          <p>
+        <div class="VOLUNTEER-card">
+          <p class="VOLUNTEER-card-title">Mentor Hackers 👨‍💻</p>
+          <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Become a mentor</p>
-          </a>
+          <div class="VOLUNTEER-card-btn">
+            <a href="https://www.techtogether.io/" target="_blank">
+              <p class="VOLUNTEER-card-btn-text">Become a mentor</p>
+            </a>
+          </div>
         </div>
 
         <!-- Workshop Hosts -->
-        <div style="border: solid 1px red">
-          <p>Workshop Hosts 🎤</p>
-          <p>
+        <div class="VOLUNTEER-card">
+          <p class="VOLUNTEER-card-title">Workshop Hosts 🎤</p>
+          <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Host a workshop</p>
-          </a>
+          <div class="VOLUNTEER-card-btn">
+            <a href="https://www.techtogether.io/" target="_blank">
+              <p class="VOLUNTEER-card-btn-text">Host a workshop</p>
+            </a>
+          </div>
         </div>
 
         <!-- Volunteer -->
-        <div style="border: solid 1px red">
-          <p>Volunteer 🙌</p>
-          <p>
+        <div class="VOLUNTEER-card">
+          <p class="VOLUNTEER-card-title">Volunteer 🙌</p>
+          <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Become a Volunteer</p>
-          </a>
+          <div class="VOLUNTEER-card-btn">
+            <a href="https://www.techtogether.io/" target="_blank">
+              <p class="VOLUNTEER-card-btn-text">Become a Volunteer</p>
+            </a>
+          </div>
         </div>
 
         <!-- Judge -->
-        <div style="border: solid 1px red">
-          <p>Judge 🧑‍⚖️</p>
-          <p>
+        <div class="VOLUNTEER-card">
+          <p class="VOLUNTEER-card-title">Judge 🧑‍⚖️</p>
+          <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Become a judge</p>
-          </a>
+          <div class="VOLUNTEER-card-btn">
+            <a href="https://www.techtogether.io/" target="_blank">
+              <p class="VOLUNTEER-card-btn-text">Become a judge</p>
+            </a>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Sponsor Section -->
     <div>
-        <div><img src="assets/bats.svg" alt=""></div>
-        <div><img src="assets/witch hat.svg" alt=""></div>
-        <h1>Sponsors</h1>
-        <a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" /></a>
-        <img src="#" alt="Sponsor logo" />
-        <img src="#" alt="Sponsor logo" />
+      <div><img src="assets/bats.svg" alt="" /></div>
+      <div><img src="assets/witch hat.svg" alt="" /></div>
+      <h1>Sponsors</h1>
+      <a href="https://www.slalombuild.com/"
+        ><img src="" alt="Slalom_Build"
+      /></a>
+      <img src="#" alt="Sponsor logo" />
+      <img src="#" alt="Sponsor logo" />
     </div>
 
     <!-- Countdown Section -->
     <div>
-        <h1>Tech Together Boston Starts In</h1>
-        <p id="time"></p>
-        <div>
-            <script>
-                var hackathonDate = new Date("Oct 29, 2022 00:00:00").getTime();
-                var x = setInterval(function(){
-                    var today = new Date().getTime();
+      <h1>Tech Together Boston Starts In</h1>
+      <p id="time"></p>
+      <div>
+        <script>
+          var hackathonDate = new Date("Oct 29, 2022 00:00:00").getTime();
+          var x = setInterval(function () {
+            var today = new Date().getTime();
 
-                    //distance between now and the hackathon date:
-                    var difference = hackathonDate - today;
+            //distance between now and the hackathon date:
+            var difference = hackathonDate - today;
 
-                    //calculate days, hours, minutes and seconds 
-                    var days = Math.floor(difference / (1000 * 60 * 60 * 24));
-                    var hours = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                    var minutes = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
-                    var seconds = Math.floor((difference % (1000 * 60)) / 1000);
+            //calculate days, hours, minutes and seconds
+            var days = Math.floor(difference / (1000 * 60 * 60 * 24));
+            var hours = Math.floor(
+              (difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+            );
+            var minutes = Math.floor(
+              (difference % (1000 * 60 * 60)) / (1000 * 60)
+            );
+            var seconds = Math.floor((difference % (1000 * 60)) / 1000);
 
-                    document.getElementById("time").innerHTML = days + " : " + hours + " : "
-    + minutes + " : " + seconds;
-                }, 1000);
-            </script>
-        </div>
-        <button>Register Now</button>
-        <div><img src="assets/full bucket.svg" alt=""></div>
+            document.getElementById("time").innerHTML =
+              days + " : " + hours + " : " + minutes + " : " + seconds;
+          }, 1000);
+        </script>
+      </div>
+      <button>Register Now</button>
+      <div><img src="assets/full bucket.svg" alt="" /></div>
     </div>
 
     <!-- Footer Section -->
