Add styling and javascript

--- a/footer.html
+++ b/footer.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechTogether Boston</title>
     <script src="https://kit.fontawesome.com/5c966cc878.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/footer.css">
 </head>
 <body>
     <footer>
-        <p>Still have questions?</p>
-        <p>Contact email@email.com</p>
+        <p>Still have questions? <br> Contact email@email.com</p>
         <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>
 
         <section class="icons">
