Specificity added to css selectors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <section class="landing-section">
     <header>
         <!-- TT and MLH Logo -->
     <nav>
@@ -61,7 +62,7 @@
         <img class="ghost-2" src="./img/ghost byte.png">
     </section>
     </header>
-
+  </section>
     <!-- About Section -->
     <div id="about-section">
       <h1>About Us</h1>
@@ -496,7 +497,7 @@
     </div>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer-section">
       <p>Still have questions? <br> Contact email@email.com</p>
       <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>
 
