--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/5c966cc878.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css" />
 </head>
 
