added box sizing

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 }, 1000);
             </script>
         </div>
-        <button class="button rounded register">Register Now</button>
+        <a href=""><button class="button rounded register">Register Now</button></a>
     </div>
     <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
 
