--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Lets go TTB" />
+    <meta name="keywords" content="Lets go TTB">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechTogether Boston</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <script src="https://kit.fontawesome.com/5c966cc878.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -28,7 +27,7 @@
         
         <!-- Bat image -->
         
-        <img class="bats" src="/img/bats.svg" alt="flying bats image">
+        <img class="bats" src="./img/bats.svg" alt="flying bats image">
 
         <li class="mlh-logo"><a href="https://mlh.io/seasons/2023/events" target="_blank"><img src="./img/mlh banner.svg" alt="MLH Banner logo"></a></li>
     </ul>
