Fixed duplicate elements error

--- a/index.html
+++ b/index.html
@@ -138,14 +138,9 @@
                 Your project will be submitted through Devpost. Click on the
                 "Submit Project" button at the top of the site to access the
                 Devpost. Your submission must include a video (no longer than 2
-
                 minutes) that showcases your project, a basic description of your
                 project, and the challenge(s) for which you want your project to
                 be considered.
-
-                minutes) that showcases your project, a basic description of
-                your project, and the challenge(s) for which you want your
-                project to be considered.
 
               </p>
             </div>
@@ -168,9 +163,6 @@
 
                 The locations of all workshops, activities, and events throughout
                 the weekend will be on the event schedule.
-
-                The locations of all workshops, activities, and events
-                throughout the weekend will be on the event schedule.
 
               </p>
             </div>
@@ -240,14 +232,6 @@
                 the first day, and we will also have a space dedicated to team
                 formation during the event.
 
-                All teams must be between 2-4 people. While you have the option
-                to work alone, if you want to submit your project you must work
-                with at least one other person. Don't worry if you don't have a
-                team—you'll have plenty of opportunities to find one!
-                TechTogether will be hosting a variety of team formation
-                activities throughout the first day, and we will also have a
-                space dedicated to team formation during the event.
-
               </p>
             </div>
             <hr class="FAQ-hr" />
@@ -266,19 +250,10 @@
             <div class="FAQ-answer-div">
               <p class="FAQ-answer">
                 The hackathon is from Oct 28th (virtually for 1-day) to Oct 30th
-                date. This event will be in-person at George Sherpard Union.
-
+                date. This event will be in-person at George Sherman Union.
                 Participants can start arriving at 7 am on Oct 29th and the event
                 will conclude at 4 pm on Oct 30th. Participants will need to
-                arrange their own transportation to and from the event. (Feel free
-                to include transportation info such as public transportation
-                nearby, directions, and more)
-
-                Participants can start arriving at 7 am on Oct 29th and the
-                event will conclude at 4 pm on Oct 30th. Participants will need
-                to arrange their own transportation to and from the event. (Feel
-                free to include transportation info such as public
-                transportation nearby, directions, and more)
+                arrange their own transportation to and from the event.
 
               </p>
             </div>
@@ -303,12 +278,7 @@
               <p class="FAQ-answer">
 
                 We recommend bringing basic hygiene products, clothes, a sleeping
-                bag with a pillow and blanket, and laptops/phones with chargers
-                (Feel free to add more things)
-
-                We recommend bringing basic hygiene products, clothes, a
-                sleeping bag with a pillow and blanket, and laptops/phones with
-                chargers (Feel free to add more things)
+                bag with a pillow and blanket, and laptops/phones with chargers.
 
               </p>
             </div>
@@ -329,11 +299,7 @@
                 includes high school, college, bootcamp students, and industry
                 professionals who are cisgender women, transgender men,
                 transgender women, non-binary people, and people of all other
-
                 genders that have been historically left on the sidelines in tech.
-
-                genders that have been historically left on the sidelines in
-                tech.
 
               </p>
             </div>
@@ -450,14 +416,6 @@
 
     <!-- Volunteer Section -->
 
-    <div>
-      <h1>Share it Forward</h1>
-      <div>
-        <!-- Mentor Hackers -->
-        <div style="border: solid 1px red">
-          <p>Mentor Hackers 👨‍💻</p>
-          <p>
-
     <div class="VOLUNTEER">
       <h1 class="VOLUNTEER-heading">Share it Forward</h1>
       <div class="VOLUNTEER-cards-container">
@@ -471,16 +429,6 @@
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Become a mentor</p>
-          </a>
-        </div>
-
-        <!-- Workshop Hosts -->
-        <div style="border: solid 1px red">
-          <p>Workshop Hosts 🎤</p>
-          <p>
 
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
@@ -500,16 +448,7 @@
           </p>
           <!-- TODO: change to valid form link -->
 
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Host a workshop</p>
-          </a>
-        </div>
-
         <!-- Volunteer -->
-        <div style="border: solid 1px red">
-          <p>Volunteer 🙌</p>
-          <p>
-
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
               <p class="VOLUNTEER-card-btn-text">Host a workshop</p>
@@ -542,26 +481,8 @@
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
+          
           <!-- TODO: change to valid form link -->
-
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Become a Volunteer</p>
-          </a>
-        </div>
-
-        <!-- Judge -->
-        <div style="border: solid 1px red">
-          <p>Judge 🧑‍⚖️</p>
-          <p>
-            <!-- TODO: Replace with the description from programming team -->
-            Reference site about Lorem Ipsum, giving information on its origins,
-            as well as a random Lipsum generator.
-          </p>
-          <!-- TODO: change to valid form link -->
-          <a href="https://www.techtogether.io/" target="_blank">
-            <p>Become a judge</p>
-          </a>
-        </div>
 
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
@@ -569,7 +490,6 @@
             </a>
           </div>
         </div>
-
       </div>
     </div>
 
