--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     </div>
 
     <!-- Sponsor Section -->
-    <div>
+    <div class="background_sponsor">
         <div class="bat"><img src="assets/bats.svg" alt="bats" width="50%"></div>
         <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
         <div class="sponsors"><h1>Sponsors</h1></div>
@@ -430,8 +430,6 @@
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
         </div>
-        
-    </div>
 
     <!-- Countdown Section -->
     <div class="countdown">
@@ -460,7 +458,7 @@
         <a href=""><button class="button rounded register">Register Now</button></a>
     </div>
     <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
-
+  </div>
     <!-- Footer Section -->
     <div>
       <p>This is the footer</p>
