fixed empty link accessibility error

--- a/index.html
+++ b/index.html
@@ -524,9 +524,9 @@
       <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>
 
       <section class="icons">
-      <a href="https://www.instagram.com/techtogetherboston/ " target="_blank"><i class="fa-brands fa-instagram"></i></i></a>
-      <a href="https://www.facebook.com/TechTogetherBoston/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-      <a href="https://www.linkedin.com/company/techtogetherboston/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/techtogetherboston/ " target="_blank"><i class="fa-brands fa-instagram"></i></i><span>Instagram</span></a>
+      <a href="https://www.facebook.com/TechTogetherBoston/" target="_blank"><i class="fa-brands fa-square-facebook"></i><span>Facebook</span></a>
+      <a href="https://www.linkedin.com/company/techtogetherboston/" target="_blank"><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
       </section>
       
   </footer>
